Fix mobile performance: header text overlay, hamburger visibility, and post titles on mobile

--- a/_sass/_includes/_header.scss
+++ b/_sass/_includes/_header.scss
@@ -45,16 +45,17 @@
 
 .header__title {
 	font-family: $super-title-font;
-	font-size: $sitetitle-large;
+	font-size: $sitetitle-small;
 	font-weight: $sitetitle-weight;
 	// letter-spacing: $sitetitle-spacing;
 	line-height: 1;
 	color: $pink-white;
 	text-decoration: none; //i don't know why but it needs this now
-	// display: grid;
-	// text-align: center;
-	// al
+	display: block;
 
+	@include mq(mobilep) {
+		padding-right: 50px;
+	}
 
 	&:hover {
 		color: $accent-color;
@@ -72,7 +73,7 @@
 .header__desc{
 	font-family: $body-font;
 	font-size: $p-small * .8;
-	line-height: .1;
+	line-height: 1.5;
 	text-decoration: none; //i don't know why but it needs this now
 	font-weight: 300;
 }
@@ -94,7 +95,8 @@
 }
 
 .menu_left {
-//	left: 10%;
+	left: 0;
+	right: 0;
 	color: $overlay-text-color;
 	font-family: "Playwrite DE Grund", serif;;
 	// font-size: 20px;
